<resources>
    <string name="app_name">InvesTradeX</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_liquid">Liquid 45</string>
    <string name="menu_indicate">Indicate</string>
    <string name="menu_portofolio">Portofolio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Liquid 45</item>
        <item>Indicate</item>
        <item>Portofolio</item>
    </string-array>
</resources>
